tests/cases/compiler-development/artifact/errors/diagnostic-trait-bound-missing-impl.diagnostic
diagnostic error code=T0001 family=type message="type i64 does not implement trait 'NeedsScore' required by generic parameter 'T'" sources=1 labels=2 notes=1 helps=1
  Source source_id=0 kind=file path="tests/cases/compiler-development/artifact/errors/diagnostic-trait-bound-missing-impl.ari" display="tests/cases/compiler-development/artifact/errors/diagnostic-trait-bound-missing-impl.ari" bytes=169
  Label index=0 role=primary source_id=0 source="tests/cases/compiler-development/artifact/errors/diagnostic-trait-bound-missing-impl.ari" line=10 column=10 end_line=10 end_column=19 byte_start=148 byte_end=157 message=""
  Snippet label=0 text="  --> tests/cases/compiler-development/artifact/errors/diagnostic-trait-bound-missing-impl.ari:10:10\n    |\n 10 |   return use_score<i64>(4);\n    |          ^^^^^^^^^"
  Label index=1 role=secondary source_id=0 source="tests/cases/compiler-development/artifact/errors/diagnostic-trait-bound-missing-impl.ari" line=5 column=17 end_line=5 end_column=27 byte_start=62 byte_end=72 message="generic parameter 'T' requires trait 'NeedsScore'"
  Snippet label=1 text="  --> tests/cases/compiler-development/artifact/errors/diagnostic-trait-bound-missing-impl.ari:5:17\n   |\n 5 | fn use_score[T: NeedsScore](value: T) -> i64 {\n   |                 ^^^^^^^^^^"
  Note index=0 location=none message="generic function specialization checks trait bounds after type arguments are known"
  Help index=0 location=none message="implement trait 'NeedsScore' for i64 or call this function with a type that already satisfies the bound"
